Added controller tests and token support for ger product by id and get available products